# aistudy1

./: BUG_REPORT_TEMPLATE.md  README.md  complete_nginx_config.conf  nginx_config_fix.conf  nginx_config_fixed.conf  pyproject.toml  修复完成报告.txt  快速部署步骤.txt
cloud_disk/21/: 47101864-222a-4e8f-9a51-dab12ac2b31b.cpp  47101864-222a-4e8f-9a51-dab12ac2b31b.cpp.backup
docs/: 自定义AI模型功能说明.md
exports/: public_words_data_20251111_120400.json  public_words_unique_20251111_120400.txt  server_migration_script_20251111_120400.py
html/: admin.html  chat_management.html  cloud_disk.html  cloud_disk_backup.html  create_progress_charts_fixed.js  index.html  language_learning.html  privacy_policy.html  remenber.html  terms_of_service.html  临时文档.txt
html/css/: base.css  components.css  layout.css  variables.css
instance/: app.db
md/: BACKEND_FIX_SUMMARY.md  BEFORE_AFTER_COMPARISON.md  CLOUD_DISK_AUTH_FIX_SUMMARY.md  CLOUD_DISK_LOGIN_FIX_GUIDE.md  CLOUD_DISK_REDESIGN_SUMMARY.md  CLOUD_DISK_UI_REDESIGN.md  CLOUD_DISK_V2_GUIDE.md  COMPLETE_FIX_SUMMARY.md  DATABASE_MIGRATION_GUIDE.md  DEBUG_AI_SETTINGS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_CHECKLIST_CLOUD_DISK.md  DEPLOYMENT_GUIDE.md  EDIT_FEATURE_SUMMARY.md  EMPTY_FOLDER_FIX.md  FIX_HTTP_413_ERROR.md  FIX_SUMMARY_20251111.md  LOGIN_TOKEN_FIX.md  QUICK_DEPLOY_TREE_SYSTEM.md  QUICK_REFERENCE.md  QUICK_START.md  README_CLOUD_DISK_V2.md  TEST_CLOUD_DISK_FIX.md  📑_FILE_INDEX.md
migration_data/: admins.sql  article_used_words.sql  categories.sql  chat_records.sql  chat_session_titles.sql  chat_sessions.sql  collections.sql  comments.sql  custom_ai_models.sql  dislikes.sql  feedback.sql  feedbacks.sql  file_shares.sql  files.sql  generated_articles.sql  migration_metadata.json  notes.sql  posts.sql  public_resources.sql  public_vocabulary_words.sql  resources.sql  test_table.sql  user_favorites.sql  user_files.sql  user_folders.sql  user_learning_records.sql  user_settings.sql  user_word_progress.sql  users.sql  verification_codes.sql  vocabulary_lists.sql  vocabulary_upload_tasks.sql  vocabulary_words.sql
py/: app.py  chat_records.py  config.py  database.py  env  language_learning.py  run.py
requriements/: fastapi_requirements.txt  requirements.txt
script/: create_admin_user.py
test/: test_cloud_disk_auth.html
txt/: QUICK_CLOUD_DISK_FIX.txt
数据库/: MYSQL连接过程.txt  表的结构
(+79 files in other folders)
